@@ -40,6 +40,20 @@
 #include "XMLDocTypeNode.h"
 #include "XMLNode.h"
 #include "XMLString.h"
+//
+///////////////////////////////////
+// special handlers
+
+#include "BgColorSpecialHandler.h"
+#include "ColorSpecialHandler.h"
+#include "DvisvgmSpecialHandler.h"
+#include "EmSpecialHandler.h"
+//#include "HtmlSpecialHandler.h"
+#if !DISABLE_GS
+	#include "PsSpecialHandler.h"
+#endif
+#include "TpicSpecialHandler.h"
+///////////////////////////////////
 
 
 #ifdef HAVE_CONFIG_H
@@ -67,6 +81,24 @@ static string datetime () {
 }
 
 
+class PSHeaderActions : public DVIActions
+{
+	public :
+		PSHeaderActions (DVIToSVG &dvisvg) : _dvisvg(dvisvg) {}
+
+		void special (const std::string &s) {
+			if (s.substr(0, 7) == "header=")
+				_dvisvg.specialManager().process(s, 0);
+		}
+		
+		BoundingBox& bbox () {return _bbox;}
+
+	private:
+		DVIToSVG &_dvisvg;
+		BoundingBox _bbox;
+};
+
+
 DVIToSVG::DVIToSVG (istream &is, ostream &os) 
 	: DVIReader(is), _out(os)
 {
@@ -90,6 +122,15 @@ int DVIToSVG::convert (unsigned firstPage, unsigned lastPage) {
 	}	
 	if (firstPage < 0)
 		firstPage = 1;
+
+	if (firstPage > 1) {
+		// ensure loading of PostScript prologues given at the beginning of the first page
+		// (prologue files are always referenced in first page)
+		PSHeaderActions headerActions(*this);
+		DVIActions *save = replaceActions(&headerActions);
+		executePage(1);
+		replaceActions(save);
+	}
 	
 	if (CREATE_STYLE && USE_FONTS) {
 		XMLElementNode *styleNode = new XMLElementNode("style");
@@ -122,15 +163,21 @@ int DVIToSVG::convert (unsigned firstPage, unsigned lastPage) {
  *  executing the BOP actions. 
  *  @param[in] c contains information about the page (page number etc.) */
 void DVIToSVG::beginPage (Int32 *c) {
-	Message::mstream() << '[' << c[0];
-	_svg.appendToDoc(new XMLCommentNode(" This file was generated by dvisvgm "VERSION_STR" "));
-	_svg.appendToDoc(new XMLCommentNode(" " + datetime() + " "));
+	if (dynamic_cast<DVIToSVGActions*>(getActions())) {
+		Message::mstream() << '[' << c[0];
+		_svg.appendToDoc(new XMLCommentNode(" This file was generated by dvisvgm "VERSION_STR" "));
+		_svg.appendToDoc(new XMLCommentNode(" " + datetime() + " "));
+	}
 }
 
 
 /** This template method is called by parent class DVIReader before
  *  executing the EOP actions. */
 void DVIToSVG::endPage () {
+	if (!dynamic_cast<DVIToSVGActions*>(getActions()))
+		return;
+
+	_specialManager.notifyEndPage();
 	Message::mstream() << ']';
 	// set bounding box and apply page transformations
 	BoundingBox &bbox = getActions()->bbox();
@@ -244,15 +291,41 @@ void DVIToSVG::embedFonts (XMLElementNode *svgElement) {
 	}
 }
 
-
+	
 /** Enables or disables processing of specials. If ignorelist == 0, all 
  *  supported special handlers are loaded. To disable selected sets of specials,
  *  the corresponding prefixes can be given separated by non alpha-numeric characters,
  *  e.g. "color, ps, em" or "color: ps em" etc.
  *  A single "*" in the ignore list disables all specials.
- *  @param[in] ignorelist list of special prefixes to ignore */
+ *  @param[in] ignorelist list of special prefixes to ignore 
+ *  @return the SpecialManager that handles special statements */
 const SpecialManager* DVIToSVG::setProcessSpecials (const char *ignorelist) {
-	return (getActions() ? getActions()->setProcessSpecials(ignorelist) : 0);
+	if (ignorelist && strcmp(ignorelist, "*") == 0) { // ignore all specials?
+		_specialManager.unregisterHandlers();
+	}
+	else {
+		// add special handlers
+		SpecialHandler *handlers[] = {
+			0,                          // placeholder for PsSpecialHandler
+			new BgColorSpecialHandler,  // handles background color special
+			new ColorSpecialHandler,    // handles color specials
+			new DvisvgmSpecialHandler,  // handles raw SVG embeddings 
+			new EmSpecialHandler,       // handles emTeX specials
+//			new HtmlSpecialHandler,     // handles hyperref specials
+			new TpicSpecialHandler,     // handles tpic specials
+			0
+		};
+		SpecialHandler **p = handlers;
+#if !DISABLE_GS
+		if (Ghostscript().available())
+			*p = new PsSpecialHandler;
+		else
+#endif
+			p++;
+		_specialManager.unregisterHandlers();
+		_specialManager.registerHandlers(p, ignorelist);
+	}
+	return &_specialManager;
 }
-		
+
 
