@@ -1,3 +1,8 @@
+dvisvgm-0.8.3
+- improved checks for Ghostscript and potrace library in configure script
+- external Ghostscript and potrace development files are used if available
+- PostScript header/prologue files are now loaded regardless of converted page
+
 dvisvgm-0.8.2
 - changed license of dvisvgm to GPL version 3 or later
 - replaced getopt-based commandline parser by own implementation
